home page and about us changes

--- a/about.html
+++ b/about.html
@@ -30,7 +30,6 @@
 						<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="about.html">About us</a></li>
 						<li><a href="#">Rooms</a></li>
-						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -56,7 +55,6 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About us</a></li>
 					<li><a href="#">Rooms</a></li>
-					<li><a href="blog.html">Blog</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -79,17 +77,17 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content text-center">
-							<div class="home_title">About us</div>
+							<div class="home_title">Please Rate</div>
 							<div class="booking_form_container">
 								<form action="#" class="booking_form" id="booking_form">
 									<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
 										<div class="booking_input_container d-flex flex-row align-items-start justify-content-start flex-wrap">
-											<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Check in" required="required"></div>
-											<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Check out" required="required"></div>
-											<div><input type="number" class="booking_input booking_input_b" placeholder="Children" required="required"></div>
-											<div><input type="number" class="booking_input booking_input_b" placeholder="Room" required="required"></div>
+											<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Dept" required="required"></div>
+											<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Feedback" required="required"></div>
+											<div><input type="number" class="booking_input booking_input_b" placeholder="Rate 1-5" required="required"></div>
+											<div><input type="number" class="booking_input booking_input_b" placeholder="StaffID" required="required"></div>
 										</div>
-										<div><button class="booking_button trans_200">Book Now</button></div>
+										<div><button class="booking_button trans_200">Rate</button></div>
 									</div>
 								</form>
 							</div>
@@ -115,7 +113,7 @@
 				<div class="col-lg-6">
 					<div class="about_content">
 						<div class="about_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit.</p>
+							<p>The River is a premium resort first started in 2017 by three people,abhinav nishith and ajay.From then we are continuously in pursuit of development.We offer premium resort stays with multiple options based on the user's choice and the no of people accompanying them.we also offer wide range of recreational activities ranging from swimming to gocarting etc.</p>
 						</div>
 						<div class="about_sig"><img src="images/sig.png" alt=""></div>
 					</div>
@@ -187,51 +185,7 @@
 		</div>
 	</div>
 
-	<!-- Split Section Left -->
-
-	<div class="split_section_left container_custom">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-6">
-					<div class="split_section_left_content">
-						<div class="split_section_title"><h1>Wedding venue</h1></div>
-						<div class="split_section_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci.</p>
-						</div>
-
-						<!-- Loaders -->
-						<div class="loaders_container d-flex flex-row align-items-start justify-content-start flex-wrap">
-							
-							<!-- Loader -->
-							<div class="loader_container text-center">
-								<div class="loader text-center" data-perc="0.9">
-									<div class="loader_content">
-										<div class="loader_title">Good Services</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container text-center">
-								<div class="loader text-center" data-perc="0.8">
-									<div class="loader_content">
-										<div class="loader_title">Tourists</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container text-center">
-								<div class="loader text-center" data-perc="1.0">
-									<div class="loader_content">
-										<div class="loader_title">Satisfaction</div>
-									</div>
-								</div>
-							</div>
-
-						</div>
-					</div>
-				</div>
+	
 
 				<!-- Loaders Image -->
 				<div class="col-xl-6">
