--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content text-center">
-										<div class="home_title">A Luxury Stay</div>
+										<div class="home_title">Activities</div>
 										<div class="booking_form_container">
 											<form action="#" class="booking_form">
 												<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
 													<div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Check in" required="required"></div>
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Check out" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Children" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Room" required="required"></div>
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Start Time" required="required"></div>
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Activity Name" required="required"></div>
+														<div><input type="number" class="booking_input booking_input_b" placeholder="End Time" required="required"></div>
+														<div><input type="number" class="booking_input booking_input_b" placeholder="Type" required="required"></div>
 													</div>
 													<div><button class="booking_button trans_200">Book Now</button></div>
 												</div>
@@ -143,15 +143,15 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content text-center">
-										<div class="home_title">A Luxury Stay</div>
+										<div class="home_title">Dining</div>
 										<div class="booking_form_container">
 											<form action="#" class="booking_form">
 												<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
 													<div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Check in" required="required"></div>
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Check out" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Children" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Room" required="required"></div>
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Type of Dining" required="required"></div>
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Restaurant Name" required="required"></div>
+														<div><input type="number" class="booking_input booking_input_b" placeholder="Cuisine" required="required"></div>
+														<div><input type="number" class="booking_input booking_input_b" placeholder="Food Order" required="required"></div>
 													</div>
 													<div><button class="booking_button trans_200">Book Now</button></div>
 												</div>
@@ -170,9 +170,9 @@
 			<div class="home_slider_dots_container">
 				<div class="home_slider_dots">
 					<ul id="home_slider_custom_dots" class="home_slider_custom_dots d-flex flex-row align-items-start justify-content-start">
-						<li class="home_slider_custom_dot active">01.</li>
-						<li class="home_slider_custom_dot">02.</li>
-						<li class="home_slider_custom_dot">03.</li>
+						<li class="home_slider_custom_dot active">Stay.</li>
+						<li class="home_slider_custom_dot">Act.</li>
+						<li class="home_slider_custom_dot">Dine.</li>
 					</ul>
 				</div>
 			</div>
@@ -191,9 +191,6 @@
 					<div class="icon_box d-flex flex-column align-items-center justify-content-start text-center">
 						<div class="icon_box_icon"><img src="images/icon_1.svg" class="svg" alt="https://www.flaticon.com/authors/monkik"></div>
 						<div class="icon_box_title"><h2>Fabulous Resort</h2></div>
-						<div class="icon_box_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum.</p>
-						</div>
 					</div>
 				</div>
 
@@ -202,9 +199,6 @@
 					<div class="icon_box d-flex flex-column align-items-center justify-content-start text-center">
 						<div class="icon_box_icon"><img src="images/icon_2.svg" class="svg" alt="https://www.flaticon.com/authors/monkik"></div>
 						<div class="icon_box_title"><h2>Infinity Pool</h2></div>
-						<div class="icon_box_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum.</p>
-						</div>
 					</div>
 				</div>
 
@@ -213,9 +207,6 @@
 					<div class="icon_box d-flex flex-column align-items-center justify-content-start text-center">
 						<div class="icon_box_icon"><img src="images/icon_3.svg" class="svg" alt="https://www.flaticon.com/authors/monkik"></div>
 						<div class="icon_box_title"><h2>Luxury Rooms</h2></div>
-						<div class="icon_box_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum.</p>
-						</div>
 					</div>
 				</div>
 
@@ -257,34 +248,7 @@
 		</div>
 	</div>
 
-	<!-- About -->
-
-	<div class="about">
-		<div class="container">
-			<div class="row">
-				
-				<!-- About Content -->
-				<div class="col-lg-6">
-					<div class="about_content">
-						<div class="about_title"><h2>The River / 10 years of excellence</h2></div>
-						<div class="about_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- About Images -->
-				<div class="col-lg-6">
-					<div class="about_images d-flex flex-row align-items-center justify-content-between flex-wrap">
-						<img src="images/about_1.png" alt="">
-						<img src="images/about_2.png" alt="">
-						<img src="images/about_3.png" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
+	
 	<!-- Testimonials -->
 
 	<div class="testimonials">
@@ -346,7 +310,7 @@
 				<div class="col">
 					<div class="booking_title text-center"><h2>Book a room</h2></div>
 					<div class="booking_text text-center">
-						<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit.</p>
+						<p>Please choose the type of room.</p>
 					</div>
 
 					<!-- Booking Slider -->
@@ -357,7 +321,6 @@
 							<div class="booking_item">
 								<div class="background_image" style="background-image:url(images/booking_1.jpg)"></div>
 								<div class="booking_overlay trans_200"></div>
-								<div class="booking_price">$120/Night</div>
 								<div class="booking_link"><a href="booking.html">Family Room</a></div>
 							</div>
 
@@ -365,7 +328,6 @@
 							<div class="booking_item">
 								<div class="background_image" style="background-image:url(images/booking_2.jpg)"></div>
 								<div class="booking_overlay trans_200"></div>
-								<div class="booking_price">$120/Night</div>
 								<div class="booking_link"><a href="booking.html">Deluxe Room</a></div>
 							</div>
 
@@ -373,7 +335,6 @@
 							<div class="booking_item">
 								<div class="background_image" style="background-image:url(images/booking_3.jpg)"></div>
 								<div class="booking_overlay trans_200"></div>
-								<div class="booking_price">$120/Night</div>
 								<div class="booking_link"><a href="booking.html">Single Room</a></div>
 							</div>
 
@@ -384,44 +345,7 @@
 		</div>
 	</div>
 
-	<!-- Blog -->
-
-	<div class="blog">
-
-		<!-- Blog Slider -->
-		<div class="blog_slider_container">
-			<div class="owl-carousel owl-theme blog_slider">
-				
-				<!-- Slide -->
-				<div class="blog_slide">
-					<div class="background_image" style="background-image:url(images/index_blog_1.jpg)"></div>
-					<div class="blog_content">
-						<div class="blog_date"><a href="#">Oct 20, 2018</a></div>
-						<div class="blog_title"><a href="#">How to book your stay</a></div>
-					</div>
-				</div>
-
-				<!-- Slide -->
-				<div class="blog_slide">
-					<div class="background_image" style="background-image:url(images/index_blog_2.jpg)"></div>
-					<div class="blog_content">
-						<div class="blog_date"><a href="#">Oct 20, 2018</a></div>
-						<div class="blog_title"><a href="#">10 restaurants in town</a></div>
-					</div>
-				</div>
-
-				<!-- Slide -->
-				<div class="blog_slide">
-					<div class="background_image" style="background-image:url(images/index_blog_3.jpg)"></div>
-					<div class="blog_content">
-						<div class="blog_date"><a href="#">Oct 20, 2018</a></div>
-						<div class="blog_title"><a href="#">A perfect wedding</a></div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
+	
 
 	<!-- Footer -->
 
@@ -446,9 +370,9 @@
 						<div class="footer_title">Our Address</div>
 						<div class="footer_list">
 							<ul>
-								<li>Beach Str. 345</li>
-								<li>67559 Miami</li>
-								<li>USA</li>
+								<li>Jayanagar</li>
+								<li>Bangalore</li>
+								<li>Karnataka</li>								
 							</ul>
 						</div>
 					</div>
