--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
 					<div class="split_section_right_content">
 						<div class="split_section_title"><h1>Luxury Resort</h1></div>
 						<div class="split_section_text">
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci.</p>
+							<p>This resort is a luxurious one with abundant number of premium rooms for different no of people to suit their best needs.we are also making available of numerous recreational activities like archery,gocarting,swimming etc and when you are tired feel free to walk into any one of our multi-cuisine restaurants to satisfy your hunger available in both vegetarian and non-vegetarian food options.Enjoy your time in peace as long as you are in the resort and feel the closeness to the nature.</p>
 						</div>
 
 						<!-- Milestones -->
