--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 											<form action="#" class="booking_form">
 												<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
 													<div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Start Time" required="required"></div>
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Activity Name" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="End Time" required="required"></div>
+														<div><input type="text" class="form-control timepicker" placeholder="Start Time" required="required"></div>
+														<div><input type="text" placeholder="Activity Name" required="required"></div>
+														<div><input type="number" class="form-control timepicker" placeholder="End Time" required="required"></div>
 														<div><input type="number" class="booking_input booking_input_b" placeholder="Type" required="required"></div>
 													</div>
 													<div><button class="booking_button trans_200">Book Now</button></div>
